fix form usuario, table + form proyectos

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"jade": "*",
 		"stylus": "*",
 		"nib": "*",
+		"connect-flash": "*",
+		"bcrypt-nodejs": "*",
 		"mysql":  "2.0.0-alpha7",
 		"sequelize": "*"
 	}
