fix creación game objects (asignación de usuarios al objeto recién creado, filtro por proyecto de objeto padre), vista panel de game object casi lista (todo: todo panel)

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
 		"nib": "*",
 		"connect-flash": "*",
 		"bcrypt-nodejs": "*",
-		"mysql":  "2.0.0-alpha7",
-		"sequelize": "*"
+		"async": "*"
 	}
 }
